[project]
name = "tvhProxy"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gevent>=25.9.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
tvhProxy = "tvhProxy:main"

[tool.ruff.lint]
extend-ignore = ["E402"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
